tests/negative/gold/bad_literal_test.gold
tests/negative/bad_literal_test.toit:4:9: error: Invalid number literal
  print 0xnope
        ^~
tests/negative/bad_literal_test.toit:4:11: error: Unresolved identifier: 'nope'
  print 0xnope
          ^~~~
tests/negative/bad_literal_test.toit:4:3: error: Argument mismatch for 'print'
Too many arguments provided
  print 0xnope
  ^~~~~
Compilation failed.
